# Netflix_for_Kids

./: .breakpoints  .gitignore  README.md  a_main2.py  export.csv  main.py  mydatabase.db  pyproject.toml  replit_zip_error_log.txt
.cache/replit/: __replit_disk_meta.json
.lesson/: instructions.md  lessonplan.md
.upm/: store.json
chapters/: 10_recommendation.md  11_run_with_arguments.md  12_bash_scripting.md  1_gcp_cloud_platform.md  2_read_from_storage.md  3_read_from_bigquery.md  4_api_countries.md  4_sql_relations.md  5_sql_joins.md  5_sql_relations.md  6_sql_joins.md  6_sql_views.md  7_sql_views.md  8_data_cleaning.md  9_data_transformation.md
data_sources/: netflix_content.csv  netflix_main.csv  ratings_data.csv
learn_area/: bash_script.sh  call_api.py  run_with_parameters.py  sql_joins.py  sql_relations.py  sql_view.py  sql_views.py  test_bash.sh  test_database.db  your_answers.txt
learning_area/1_GCP/: 1_gcp_lesson.md  service_user_read_file.json
lessons/: 2_read_from_storage.md  3_read_from_bigquery.md  4_save_in_sql.md  service_user_read_bigquery.json
local-env/: pyvenv.cfg
local-env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  fixup_bigquery_storage_v1_keywords.py  google
program/: helper_functions.py
program/data_export/: Check_Data_from_SQLite.py  movie_recommendations.csv  t10_creating_SQLiteDB.py  t12_sql_Join_Rating.py  t14_creating_view.py  t15_creating_cleanedTable.py  t16_17_Additional_info_by_Movie_Target_kids.py  t16_19_clear_target_forKIDS.py  t_10_Insert_data_to_SQL.py  t_6_7_Csv_files_work.py
(+6 files in other folders)
